# Saxion_CPP_Assignment3

./: CMakeLists.txt  main.cpp
rational/: Rational.cpp  Rational.h
rational/calculation/: Calculation.cpp  Calculation.h
rational/processor/: Processor.cpp  Processor.h
util/textfile/: TextfileUtil.cpp  TextfileUtil.h
util/validation/: Validator.cpp  Validator.h
